--- a/src/RaffleSkill/.ask/config
+++ b/src/RaffleSkill/.ask/config
@@ -26,12 +26,12 @@
         "lambda": [
           {
             "arn": "arn:aws:lambda:us-east-1:382401613793:function:ask-custom-RaffleSkill-default",
-            "functionName": "ask-custom-RaffleSkill-default",
+            "functionName": "arn:aws:lambda:us-east-1:382401613793:function:ask-custom-RaffleSkill-default",
             "awsRegion": "us-east-1",
             "alexaUsage": [
               "custom/default"
             ],
-            "revisionId": "0f374614-6fe7-427a-b2b8-18496efd1950"
+            "revisionId": "eb6c1ca4-6a82-4e04-82f7-395350c2c7d7"
           }
         ]
       }
