--- a/src/RaffleWeb/RaffleWeb/appsettings.json
+++ b/src/RaffleWeb/RaffleWeb/appsettings.json
@@ -1,8 +1,9 @@
 ﻿{
   "Logging": {
-    "IncludeScopes": false,
+    "IncludeScopes": true,
     "LogLevel": {
-      "Default": "Warning"
-    }
+      "Default": "Information"
+    },
+    "InstrumentationKey": "c339a212-152c-4855-8d7d-67766f9963bd"
   }
 }
